--- a/index.html
+++ b/index.html
@@ -4,7 +4,152 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Personal Portfolio freecodecamp</title>
   </head>
-  <body></body>
+  <body>
+    <header id="navbar" class="header">
+      <ul class="nav-list">
+        <li><a class="nav-link btn" href="#welcome-section">About</a></li>
+        <li><a class="nav-link btn" href="#projects">Work</a></li>
+        <li><a class="nav-link btn" href="#contact">Contact</a></li>
+      </ul>
+    </header>
+
+    <section id="welcome-section" class="welcome-section">
+      <h1>Hey I am Karem</h1>
+      <p class="job-title">a web developer</p>
+    </section>
+    <section id="projects" class="projects">
+      <h2 class="projects-header">These are some of my projects</h2>
+      <div class="projects-container">
+        <a
+          href="https://www.google.com/"
+          class="project project-tile"
+          target="_blank"
+        >
+          <img
+            class="project-img"
+            src="https://cdn.freecodecamp.org/testable-projects-fcc/images/map.jpg"
+            alt=""
+          />
+          <p class="project-desc">
+            <span class="code"><</span>Project Number 1<span class="code"
+              >/ >
+            </span>
+          </p></a
+        >
+        <a
+          href="https://www.google.com/"
+          class="project project-tile"
+          target="_blank"
+        >
+          <img
+            class="project-img"
+            src="https://cdn.freecodecamp.org/testable-projects-fcc/images/map.jpg"
+            alt=""
+          />
+          <p class="project-desc">
+            <span class="code"><</span>Project Number 2<span class="code"
+              >/ >
+            </span>
+          </p></a
+        >
+        <a
+          href="https://www.google.com/"
+          class="project project-tile"
+          target="_blank"
+        >
+          <img
+            class="project-img"
+            src="https://cdn.freecodecamp.org/testable-projects-fcc/images/map.jpg"
+            alt=""
+          />
+          <p class="project-desc">
+            <span class="code"><</span>Project Number 3<span class="code"
+              >/ >
+            </span>
+          </p></a
+        >
+        <a
+          href="https://www.google.com/"
+          class="project project-tile"
+          target="_blank"
+        >
+          <img
+            class="project-img"
+            src="https://cdn.freecodecamp.org/testable-projects-fcc/images/map.jpg"
+            alt=""
+          />
+          <p class="project-desc">
+            <span class="code"><</span>Project Number 4<span class="code"
+              >/ >
+            </span>
+          </p></a
+        >
+        <a
+          href="https://www.google.com/"
+          class="project project-tile"
+          target="_blank"
+        >
+          <img
+            class="project-img"
+            src="https://cdn.freecodecamp.org/testable-projects-fcc/images/map.jpg"
+            alt=""
+          />
+          <p class="project-desc">
+            <span class="code"><</span>Project Number 5<span class="code"
+              >/ >
+            </span>
+          </p></a
+        >
+        <a
+          href="https://www.google.com/"
+          class="project project-tile"
+          target="_blank"
+        >
+          <img
+            class="project-img"
+            src="https://cdn.freecodecamp.org/testable-projects-fcc/images/map.jpg"
+            alt=""
+          />
+          <p class="project-desc">
+            <span class="code"><</span>Project Number 6<span class="code"
+              >/ >
+            </span>
+          </p></a
+        >
+      </div>
+      <a href="#" class="projects-btn btn">Show all</a>
+    </section>
+    <section id="contact" class="contact">
+      <div class="contact-header">
+        <h3>Let's work together...</h3>
+        <p>How do you take your coffee?</p>
+      </div>
+      <div class="contact-list">
+        <a class="contact-link" href="#">Facebook</a>
+        <a class="contact-link" href="#">Youtube</a>
+        <a class="contact-link" href="#">Twitter</a>
+        <a class="contact-link" href="#">Github</a>
+        <a class="contact-link" href="#">LinkedIn</a>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <p class="footer-text">
+        **This is not my real Portfolio, just a project for freecodecamp.
+      </p>
+      <p>
+        <a
+          class="footer-link"
+          id="profile-link"
+          href="https://www.freecodecamp.org/"
+          target="_blank"
+        >
+          &copy; Created for freeCodeCamp</a
+        >
+      </p>
+    </footer>
+  </body>
 </html>
